Finished section on Lightning Dock

--- a/templates/chap2.tex
+++ b/templates/chap2.tex
@@ -35,7 +35,7 @@ Conduction dominates on local scales in the crust, while convection is the prima
 \begin{equation}\label{eq:convection}
 \frac{\partial T}{\partial t} = \frac{1}{\rho c_P}\nabla\bullet\left(k\nabla T\right)-{\bf u}\bullet\nabla T
 \end{equation}
-where \textbf{u} = ($u_x$, $u_z$) is the velocity of the fluid, $\rho$ is the material density, and $c_P$ is the specific heat, which defines the amount of heat necessary to raise 1 kg of that material by $1$ K. Convection combines heat transfer from conduction with mass movement. Since the minerals are relatively poor conductors of heat, the combined effects of lower viscosity and thermal expansion --– as seen near the core-mantle boundary –- and gravitational forces responsible for buoyancy effects, all create the right conditions for convective flow \citep[p.\ 25]{glassley_geothermal_2015}. Mantle convection is responsible for the high heat-flow values observed at crustal-plate boundaries like mid-ocean ridges, as well as intraplate diapiric hot spots underlying Hawaii, Yellowstone, and several other locations around the world. Smaller-scale convection also takes place at subduction zones where the material from the down-diving plate melts at lower temperatures with the presence of water, migrates upwards, and forms volcanic arcs on the surface as observed in Japan, Indonesia, and the Pacific Northwest of the U.S.\ \citep[p.\ 31-33]{press_understanding_2004} --– all locations with geothermal potential.
+where \textbf{u} = ($u_x$, $u_z$) is the velocity of the fluid, $\rho$ is the material density, and $c_P$ is the specific heat, which defines the amount of heat necessary to raise 1 kg of that material by $1$ K. Convection combines heat transfer from conduction with mass movement. Since the minerals are relatively poor conductors of heat, the combined effects of lower viscosity and thermal expansion --– as seen near the core-mantle boundary –- and gravitational forces responsible for buoyancy effects, all create the right conditions for convective flow \citep[p.\ 25]{glassley_geothermal_2015}. Mantle convection is responsible for the high heat-flow values observed at crustal plate boundaries like mid-ocean ridges, as well as intraplate diapiric hot spots underlying Hawaii, Yellowstone, and several other locations around the world. Smaller-scale convection also takes place at subduction zones where the material from the down-diving plate melts at lower temperatures with the presence of water, migrates upwards, and forms volcanic arcs on the surface as observed in Japan, Indonesia, and the Pacific Northwest of the U.S.\ \citep[p.\ 31-33]{press_understanding_2004} --– all locations with geothermal potential.
 
 Heat-flow measurements capture the flux of heat through the Earth’s surface as a result of these and other complex processes taking place in the subsurface. In this respect, it serves as a simpler and more accessible metric for local or regional heat potential than the more sparsely-measured geothermal gradient. Today, high-quality heat flow measurements can be obtained in marine conditions, along continental margins, on mid-ocean ridges, and from the multitude of wells drilled by the oil \& gas industry, supporting the creation of large heat-flow data sets like the New Global Heat Flow Database \citep{lucazeau_analysis_2019}. As Figure \ref{fig:heatflow} shows, data from these collections can be gridded to create spectacular maps of heat flow variations around the world. These maps offer a good starting point for quickly targeting where the greatest geothermal potential exists at the regional scale, which can then be further refined through additional methods (see Section \ref{ch2:geoexp}).
 
@@ -102,8 +102,7 @@ In some cases, the potential for a geothermal system exists even when one or mor
 \label{fig:egs_schematic}
 \end{figure}
 
-EGS can provide the bridge between geothermal use in niche hydrothermal environments and a more comprehensive adoption of geothermal energy for electricity generation across the United States. The sources of subsurface heat (see Section \ref{ch2:heatorig}) exist everywhere, so accessing a range of temperatures that could support power production relies on drilling deep enough and creating the artificial conditions necessary for heat capture. \acrlong{lanl} (\acrshort{lanl}) validated the EGS approach in crystalline rock at Fenton Hill beginning in 1974. Feasibility studies followed soon thereafter in Japan, Germany, the U.K., and France \citep{breede_systematic_2013}. Among the most notable EGS projects that provided key lessons %learned
-are The Geysers (U.S.), Soultz-sous-Forêts (France), and Cooper Basin (Australia). The Geysers stands out as the largest geothermal power-generating complex in the world, providing $\approx1,000$ MWe for California even after 60 years of steam production \citep{jelacic_evaluation_2008,williams_assessment_2008}. Although drilling issues and public concern over induced seismicity halted efforts \citep{manish03_united_2009}, rock-stimulation experiments in the Northwest Geysers proved distinct reservoirs can be developed adjacent to active hydrothermal operations \citep{pan_establishment_2019}. The Soultz project commenced in 1987 with one injector and two producers drilled to 5 km depth to support a 1.5 MW power plant built in 2007-2008 \citep[p.\ 463]{dipippo_geothermal_2012}. In addition to many experimental lessons learned around drilling, hydrofracturing, chemical stimulation, scaling and corrosion, Soultz today supports both electricity production and direct-use district heating \citep{durst_overview_2013}. Cooper Basin, the largest EGS demonstration project in the world, showed great promise after a 6-year proof-of-concept phase \citep{stephens_assessing_2010}. However, the project halted in 2015 due poor stimulation results tied to an unrecognized fault, highlighting the importance of robust structural appraisal in assessing geothermal prospects \citep{holl_what_2015}. 
+EGS can provide the bridge between geothermal use in niche hydrothermal environments and a more comprehensive adoption of geothermal energy for electricity generation across the United States. The sources of subsurface heat (see Section \ref{ch2:heatorig}) exist everywhere, so accessing a range of temperatures that could support power production relies on drilling deep enough and creating the artificial conditions necessary for heat capture. \acrlong{lanl} (\acrshort{lanl}) validated the EGS approach in crystalline rock at Fenton Hill beginning in 1974. Feasibility studies followed soon thereafter in Japan, Germany, the U.K., and France \citep{breede_systematic_2013}. Among the most notable EGS projects that provided key lessons learned are The Geysers (U.S.), Soultz-sous-Forêts (France), and Cooper Basin (Australia). The Geysers stands out as the largest geothermal power-generating complex in the world, providing $\approx1,000$ MWe for California even after 60 years of steam production \citep{jelacic_evaluation_2008,williams_assessment_2008}. Although drilling issues and public concern over induced seismicity halted efforts \citep{larson_altarock_2009}, rock-stimulation experiments in the Northwest Geysers proved distinct reservoirs can be developed adjacent to active hydrothermal operations \citep{pan_establishment_2019}. The Soultz project commenced in 1987 with one injector and two producers drilled to 5 km depth to support a 1.5 MW power plant built in 2007-2008 \citep[p.\ 463]{dipippo_geothermal_2012}. In addition to many experimental lessons learned around drilling, hydrofracturing, chemical stimulation, scaling and corrosion, Soultz today supports both electricity production and direct-use district heating \citep{durst_overview_2013}. Cooper Basin, the largest EGS demonstration project in the world, showed great promise after a 6-year proof-of-concept phase \citep{stephens_assessing_2010}. However, the project halted in 2015 due poor stimulation results tied to an unrecognized fault, highlighting the importance of robust structural appraisal in assessing geothermal prospects \citep{holl_what_2015}. 
 
 As the fate of these projects might suggest, the long-standing promise of EGS has not yet been fully realized. However, several active projects supported by the \acrlong{nrel} (\acrshort{nrel}) and the DOE (e.g., EDGE, FORGE, EGS Collab) are providing the insights necessary to mature subsurface models, drilling technologies, and stimulation methods for more widespread EGS adoption \citep{hamm_geothermal_2021}. And recent technology advances and partnerships involving start-ups Fervo Energy \citep{moss_google_2021,shieber_geothermal_2021}, Deep Earth Energy \citep{geoenergy_saskatchewan_2021}, Eavor Technologies \citep{ross_energy_2020}, and Climeon \citep{climeon_climeon_2021,geoenergy_baseload_2020} show there is a growing fervor to overcome the technology roadblocks currently holding EGS back. Projections show the size of the prize with success in EGS. Assuming a maximum cut-off depth of 7 km and a minimum reservoir temperature of 150$^\circ$C, the EGS resource potential for electricity production in the continental United States might be at least 5,150 GWe, with an additional $\approx1,500$ MWe from Near Hydrothermal Field-EGS (\acrshort{nfegs}) \citep{augustine_geovision_2019}. To put this opportunity into context: the total utility-scale electricity generation capacity from \underline{all} sources in the United States was $\approx1,200$ GWe in 2019, over 4$\times$ less in magnitude than the predicted EGS potential \citep{eia_electric_2020}.
 
@@ -171,7 +170,7 @@ Temperature survey      & heat flow, geothermal gradient
 
 Geologic field mapping in an area can provide crucial direct evidence supporting the presence of geothermal systems. Surface manifestations like geysers, vents, and mud pots may also be coincident with mappable mineralogic indicators of the subsurface chemistry and style of geothermal activity.  Volcanic-based geothermal systems tend to have acid-sulfate waters with hydrogen sulfide-rich brines that leave behind sulfur deposits \citep[p.\ 123]{glassley_geothermal_2015}. Bicarbonate geothermal waters can produce distinctive travertine terraces or subaqueous tufa deposits, as well as a unique variety of K-spar called adularia \citep[p.\ 125]{glassley_geothermal_2015}. And chloride geothermal fluids are known to precipitate sinter or geyserite deposits composed of opal or amorphous silica \citep[p.\ 125]{glassley_geothermal_2015}. Elevated abundances of trace elements like boron and lithium typically occur in chloride brines compared to meteoric (derived from precipitation) waters, so their presence in mineral assemblages is also diagnostic \citep{bielicki_hydrogeolgic_2015, millot_multi-isotopic_2007}. Other valuable products of a geologic survey include maps of surface fault patterns to better constrain the structural history, as well as volcanic intrusive (dikes) and extrusive (flows) features for understanding the thermal history and potential deeper reservoir potential.
 
-Direct geochemical analysis of springs, pools, and samples collected from wells provides additional insights into the hydrologic characteristics of an area. Water chemistry offers information on the dominant resource fluid phase (vapor vs.\ liquid), the temperature of the subsurface formations encountered by the fluids, and the nature of the original water source \citep[p.\ 25]{dipippo_geothermal_2012}. The concentration or equilibria of different elements e.g., quartz, chalcedony, sodium, potassium, and calcium, can be compared to empirically-derived trends for reservoir-temperature estimates \citep[p.\ 157]{glassley_geothermal_2015}. These geothermometry methods offer insights into the deep thermal regime, although uncertainty around fluid migration pathways disallows any clear designation of the exact location and depth of a thermal reservoir.
+Direct geochemical analysis of springs, pools, and samples collected from wells provides additional insights into the hydrologic characteristics of an area. Water chemistry offers information on the dominant resource fluid phase (vapor vs.\ liquid), the temperature of the subsurface formations encountered by the fluids, and the nature of the original water source \citep[p.\ 25]{dipippo_geothermal_2012}. The concentration or equilibria of different elements, e.g., quartz, chalcedony, sodium, potassium, and calcium, can be compared to empirically-derived trends for reservoir temperature estimates \citep[p.\ 157]{glassley_geothermal_2015}. These geothermometry methods offer insights into the deep thermal regime, although uncertainty around fluid migration pathways disallows any clear designation of the exact location and depth of a thermal reservoir.
 
 Field methods like water sampling and geologic mapping provide local insights that can be aggregated for a bigger picture understanding of an area, with the caveat that field data are often limited in number and spatial distribution. Aerial and satellite surveys gather regionally-extensive measurements without the spatial sampling bias implicit in field activities. High-resolution topography captured in \acrlong{dem} (\acrshort{dem}) and DEM gradient (slope) can reveal morphology patterns tied to surface water drainage and recharge potential for deeper geothermal systems. Other optical products provide additional information of value; infrared imagery captures thermal anomalies in the shallow subsurface, stereographic images emphasize fault offsets missed in the field, and hyperspectral imaging can discriminate between different mineral assemblages, including geothermally-sourced boron-rich accumulations \multicitep{dipippo_geothermal_2012, p.\ 22;glassley_geothermal_2015, p.\ 154-155}.
 
@@ -227,7 +226,7 @@ This thesis considers a modeling approach where all three types of uncertainty a
 
 Geothermal facilities share similarities with many other methods of energy capture. Fundamentally, the primary value function at the center of a facility is producing power, further specified as a turbine generating electricity (Figure \ref{fig:solution_neutral}). This solution-neutral function could be specified into a variety of concepts that involve different operands --- wind, solar, water, hydrocarbons --- to produce the same result.  For geothermal, the common concepts include steam plants, flash plants, and binary cycle plants. Each concept has a range of temperatures and typical depths over which it is best suited to operate. Additional applications for geothermal are depicted in Figure \ref{fig:geotherm_apps}, including heat pumps and direct use, however those concepts abstract to a different functional intent than energy production. Also shown are specific types of geothermal systems like hot sedimentary basins, co-production from non-geothermal wells, and EGS. Note that the EGS oval could extend shallower for tight reservoirs as proposed in Chapter 4, but deeper wells (> 3-5 km) become more challenging to justify primarily due to cost of drilling \citep{moore_more_2013}.
 
-\begin{figure}[htp!]
+\begin{figure}%[htp!]
 \centering
 \includegraphics[width=\textwidth]{templates/images/Figure-Geothermal_Use_Moore2013.png}
 \caption[Geothermal applications by temperature and depth]{Traditional temperatures and depths associated with different geothermal applications. Boiling point defines the upper bound for geothermal use. Ellipses are approximate. Figure adapted from \protect\citep{moore_more_2013}.}
@@ -279,7 +278,8 @@ Because natural drive of the brine from subsurface to surface diminishes at lowe
 \label{fig:binary_plant}
 \end{figure}
 
-\section{Cost Modeling}\label{ch2:costmod}
+\section{Cost Modeling}
+\label{ch2:cost_models}
 
 \subsection{Review of Approaches}
 
@@ -312,18 +312,20 @@ The \acrlong{cp} (\acrshort{cp}) province presents a very different geologic pic
 
 On the western side of the AOI is the \acrlong{mdvf} (\acrshort{mdvf}), a 15,000 square mile outpouring of rhyolitic flows as part of a super-eruptive episode in western New Mexico that preceded rifting in the RGR province \citep{keller_rio_1999}. The timing indicates the thermal source for the MDVF magmas likely originated from a Farallon subduction-related event rather than onset of extension, and extrusive activity only represents a fraction of the total magma volume in the underlying composite pluton \citep{olsen_rio_1987,schneider_crustal_1994}. MDVF is just one of several Late Eocene-Oligocene volcanic fields in a chain from Colorado though to central Mexico, and isotopic dating defines four pulses of surface activity beginning 36 Ma near Las Cruces, NM and ending conclusively 24 Ma after a general westward migration \citep{mcintosh_time-stratigraphic_1992}. Lack of consistent trends in current heat flow measurements across the field match the heterogeneous distribution of volcanic features and extrusive volumes \citep{mcintosh_time-stratigraphic_1992}, although some evidence suggests greater water availability and geothermometry measurements make MDVF worth considering for geothermal exploration \citep{pepin_new_2018}.
 
-\subsection{Lightning Dock (DBGF)} 
+\subsection{Lightning Dock} 
 \label{ch2:lightning_dock}
 
 \begin{wrapfigure}{R}{0.65\linewidth}%[!htp]
 \centering
 \includegraphics[scale=0.6]{templates/images/Figure-Lightning_Dock_Location_composite.png}
-\caption[Lightning Dock location map]{CAPTION}
+\caption[Lightning Dock location map]{Map location of the Lightning Dock power plant. Inset map shows the facility in relationship to the state of NM and study area of interest for Chapters \ref{ch3:expl_prep} and \ref{ch5:expl_ml} of this thesis. Map created using Google Earth.}
 \label{fig:lightning_dock_map}
 \end{wrapfigure}
 
-Present-day commercial geo-thermal activity in New Mexico is limited to a single hydrothermal power plant in Hidalgo County, which defines the boot heel in the southwestern corner of the state (Figure \ref{fig:lightning_dock_map}). The power plant, traditionally known as Lightning Dock and recently renamed the Dale Burgett Geothermal Facility, sits atop a known geothermal resource area documented by the USGS in 1974 \citep{dahal_evaluation_2012}, around twenty (20) miles southwest of Lordsburg, NM. Although the hydrothermal resource was originally blind, boiling water was encountered in 1948 by drilling operations for water wells \citep{elston_geology_1983}. Commercial use of the resource dates back to 1977 to support greenhouse facilities and later, in the 1990s, for aquaculture \citep{crowell_history_2014}. Power production commenced in 2013 under the ownership of Cyrq Energy with a 4 MW air-cooled binary cycle power plant composed of four (4) power blocks \citep{goodman_lightning_2013}. \acrlong{pnm} (\acrshort{pnm}) signed a long-term \acrlong{ppa} (\acrshort{ppa}) for the generated electricity \citep{dahal_evaluation_2012}, as encouraged by the New Mexico \acrlong{rps} (\acrshort{rps}) carve-out for 5\% non-wind, non-solar renewable technologies \citep{dsire_dsire_2021}. Lightning Dock was fully revamped in 2018 by Turboden to its present-day 11.2 MW (net) single-turbine binary cycle architecture \citep{bonafin_repowering_2019}. The twenty (20)-year PPA with PNM was reset and secures power sales through 2038 \citep{oconnell_matter_2018}.
+Present-day commercial geo-thermal activity in New Mexico is limited to a single hydrothermal power plant in Hidalgo County, which defines the boot heel in the southwestern corner of the state (Figure \ref{fig:lightning_dock_map}). The power plant, traditionally known as Lightning Dock and recently renamed the Dale Burgett Geothermal Facility, sits atop a known geothermal resource area documented by the USGS in 1974 \citep{dahal_evaluation_2012}, around twenty (20) miles southwest of Lordsburg, NM. Although the hydrothermal resource was originally blind, boiling water was encountered in 1948 by drilling operations for water wells \citep{elston_geology_1983}. Commercial use of the resource dates back to 1977 to support greenhouse facilities and later, in the 1990s, for aquaculture \citep{crowell_history_2014}. Power production commenced in 2013 under the ownership of Cyrq Energy with a 4 MW air-cooled binary cycle power plant composed of four power blocks \citep{goodman_lightning_2013}. \acrlong{pnm} (\acrshort{pnm}) signed a long-term \acrlong{ppa} (\acrshort{ppa}) for the generated electricity \citep{dahal_evaluation_2012}, as encouraged by the New Mexico \acrlong{rps} (\acrshort{rps}) carve-out for 5\% non-wind, non-solar renewable technologies \citep{dsire_dsire_2021}. Lightning Dock was fully revamped in 2018 by Turboden to its present 11.2 MW (net) single-turbine binary cycle architecture \citep{bonafin_repowering_2019}. The 20-year PPA with PNM was reset and secures power sales through 2038 \citep{oconnell_matter_2018}.
 
+The Lightning Dock facility is found on the eastern side of the Animas Valley, which lies at the northern extent of the Mexican Highland in the eastern Basin and Range province (BR) \citep{cunniff_final_2005}. The bounding mountain ranges are the Pyramid Mountains to the east and Pelocillo Mountains to the west (Figure \ref{fig:lightning_dock_map}). As is typical for the BR, this surface geography is diagnostic of a fault-bounded graben architecture. Lightning Dock leverages the bounding Animas Valley fault to access deep-sourced hydrothermal waters for power production. Interestingly, this fault ties to the ring fracture zone of a 20-km wide Oligocene volcanic feature known as Muir Cauldron \citep{elston_geology_1983}. The exact heat source responsible for hydrothermal activity remains in question, but geochemical analysis suggests circulation of 250$^\circ$C waters from depths of 6-8 km \citep{schochet_development_2001}. These fluids upwell within the fault zone and intermingle with cool groundwater fed by runoff from the neighboring highlands, creating the lower-temperature brine at 150-170$^\circ$C targeted by Lightning Dock \citep{crowell_history_2014}.
 
+Prior to the construction of Lightning Dock, \citet{schochet_development_2001} submitted a proposed development plan for a hybrid hydrothermal-EGS project to the DOE. Similar to the Lightning Dock design, hydrothermal fluids would be produced from shallow depths (<1 km). In addition, the $\approx$600 m thick Horquilla Limestone formation could be treated as an EGS reservoir to supplement the hydrothermal power production and serve as a proof of concept for commercial EGS \citep{schochet_development_2001}. The proposal provided a cost analysis for two possible power plant sizes using most-likely values for variables and a single deterministic estimate of total plant and field cost \citep[Table 3]{schochet_development_2001}. Although the proposal was never executed, the concept of combining the Lightning Dock power plant with an EGS expansion is an intriguing modern-day extension of Schochet and Cunniff’s vision. However, such a project would come with many financial risks tied to operations, resource management, and external market factors. This thesis considers how that risk might be mitigated through cost modeling that accounts for uncertainty in the model parameters and the potential for just-in-time strategic decision-making. Such an approach goes beyond the cost models described in Section \ref{ch2:cost_models} and the simple cost analysis performed by \citet{schochet_development_2001}, treating the project as a system with its own dynamics and emergent financial results.
 
 \section{Recap}
