--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,4 +1,16 @@
 
+@misc{larson_altarock_2009,
+	title = {{AltaRock} suspends {Geysers} drilling project},
+	url = {https://www.lakeconews.com/component/content/article/142-local-government/10159-altarock-suspends-geysers-drilling-project-},
+	abstract = {THE GEYSERS – A geothermal company is suspending its plans to conduct drilling for a bedrock fracturing project in The Geysers.    On Wednesday, AltaRock Energy, which has offices in Sausalito and Seattle, announced it was suspending its demonstration drilling project on a well located on federal lease land above Middletown.      The company was planning to test out its engineered geothermal systems technology, which involves drilling deep into the earth\&\#39;s surface to create fractures in bedrock, and then injecting water to harness steam for power production.    “AltaRock Energy Inc. has encountered a number of physical difficulties in the drilling of well E-7, the first well planned as part of its engineered geothermal systems  demonstration project in the Geysers, resulting from geologic anomalies particular to the formation underlying this well location,” the company said in its Wednesday statement.    “As a result, we have suspended the drilling of this well as part of the Geysers Demonstration project. We are continuing with the development of our EGS technology and are currently evaluating a number of alternative well locations, at the Geysers and elsewhere for demonstrating this technology,” the statement added.    John Dearing, a BLM spokesman in the agency\&\#39;s Sacramento office, said Thursday that the BLM had authorized AltaRock to stop drilling after the company notified them last week of their intention to suspend activity.    “That was authorized last week, verbally, and they\&\#39;re doing their paperwork right now,” said Dearing.    Dearing said AltaRock could decide to come back to the site and wouldn\&\#39;t need new permits, which only would be necessitated if they wanted to operate on a different drilling site.    He said the Department of Energy was conducting the additional evaluation. Department of Energy representatives did not return calls placed Thursday by Lake County News.    Meriel Medrano, a longtime resident of Anderson Springs, the closest community to The Geysers drilling operations, said she\&\#39;s not sorry to see the company go.    “Maybe they can regroup and do it right this time,” said Medrano, who added that she expects the company will come back with another attempt.      The energy is needed, said Medrano, but she added that there needs to be more research. “We don\&\#39;t know if it\&\#39;s going to work.”    Jeff Gospe, president of the Anderson Springs Community Alliance, agreed that more transparency was needed in the process, as well as a complete assessment of the potential risks.    “We\&\#39;re not categorically opposed to the project, but we are opposed to things being rushed through,” he said.    Gospe also suggested that the fact the company had trouble with just the initial drilling “raises a lot of reasonable doubts” about AltaRock\&\#39;s capabilities. He thinks the press, scrutiny from officials and pressure from investors led to the project\&\#39;s suspension. Gospe said the drill rig is now being dismantled.    The federal government had given approval to the project after a month-long public comment period on the company\&\#39;s proposed plan and one community meeting in Middletown this spring, as Lake County News has reported.    But concerns about the company\&\#39;s EGS technology – first raised in June in a New York Times article, followed by coverage by local and national media – led to a reevaluation by the Department of Energy and the Bureau of Land management.      In Basel, Switzerland, and other parts of the world where the EGS technology is used, it has been known to trigger earthquakes. Bureau of Land Management official Rich Eastabrook said in June that the company hadn\&\#39;t mentioned the issues in Basel, with company officials replying that the Basel earthquakes – beginning with a 3.4 in 2006 that was followed by 3,500 more over the following year – were well known in the industry.    In July, the Department of Energy and BLM ordered further review, a decision which Dr. Ernie Majer, a scientist and geophysics department deputy division director for the Lawrence Berkeley National Laboratory, told Lake County News came directly from Dr. Steven Chu, head of the Department of Energy.    Community groups have kept up the pressure on officials over their concerns about the drilling project, which was locating in the already seismically active Geysers area.      Those concerns were punctuated in early July when – shortly after AltaRock began its initial drilling –the Geysers area experienced five quakes measuring 3.0 magnitude and above in a matter of only a few weeks.      On Aug. 26, Hamilton Hess, chair of the Friends of Cobb Mountain, and Gospe sent a letter to Ed Wall, project manager for geothermal technologies in the Department of Energy\&\#39;s Office of Energy Efficiency and Renewable Energy in Washington, D.C.    In the letter, Hess and Gospe requested that a full environmental impact study be conducted on the proposed project under the requirements of the National Environmental Policy Act. They cited the project\&\#39;s controversial nature and the precedent it would set, and stated that it “entails an undeniable risk of significant to severe earthquake activity.” A full study was necessary in the interests of transparency, they asserted.    “The residents of the region are already plagued by geothermally induced earthquakes, and we find the prospect of increased numbers of quakes to be unacceptable,” Hess and Gospe wrote.    In July the Board of Supervisors granted AltaRock\&\#39;s request to be added to the Anderson Springs Geothermal Mitigation Committee.      Medrano, who sits on the committee, said company representatives were at the last committee meeting, held last week.      Company officials pledged to deposit \$10,000 into a community mitigation fund, which Medrano called “a good will gesture.” Gospe said those funs have been placed in a separate account.    The company gave an additional \$10,000 toward Anderson Springs\&\#39; sewer project. That money was headed to the county.      County Administrative Office Kelly Cox said the county already has received the money.      “We cashed the check,” Cox said Thursday, noting that he doesn\&\#39;t believe the county can give it back at this point because it in in the county\&\#39;s treasury and would constitute a gift of public funds.    AltaRock, which received more than \$6 million in federal Department of Energy funds and an additional \$30 million in venture capital for its plans, said it has a portfolio of approximately 20 patent filings relating to EGS and is actively continuing with the development of its proprietary technology in this area.      “We believe EGS is a clean, renewable energy alternative capable of reducing our economy’s dependence on fossil fuels and creating a more sustainable future, and this technology is the best way of tapping this non-carbon based source of power,” the company\&\#39;s statement concluded.    E-mail Elizabeth Larson at elarson@lakeconews.com . Follow Lake County News on Twitter at http://twitter.com/LakeCoNews .},
+	language = {en-gb},
+	urldate = {2021-07-21},
+	journal = {Lake County News},
+	author = {Larson, Elizabeth},
+	month = sep,
+	year = {2009},
+}
+
 @misc{oconnell_matter_2018,
 	address = {Santa Fe, NM, USA},
 	title = {In the {Matter} of {Public} {Service} {Company} of {New} {Mexico}'s {Application} for {Approval} of its {Renewable} {Energy} {Act} {Plan} for 2019 and {Proposed} 2019 {Rider} {Rate} {Under} {Rate} {Rider} {No}. 36},
